@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2014,v 1.4684 2014/12/06 03:19:47 rodent Exp $
+$NetBSD: CHANGES-2014,v 1.4685 2014/12/06 03:24:49 ryoon Exp $
 
 Changes to the packages collection and infrastructure in 2014:
 
@@ -6099,3 +6099,4 @@ Changes to the packages collection and infrastructure in 2014:
 	Added devel/py-rednose version 0.4.1 [rodent 2014-12-06]
 	Updated fonts/umefont-ttf to 0.467 [ryoon 2014-12-06]
 	Added comms/py-python-termstyle version 0.1.10 [rodent 2014-12-06]
+	Updated www/php-ja-wordpress to 4.0.1 [ryoon 2014-12-06]
